--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,7 +10,7 @@ jobs:
   build:
 
     runs-on: ubuntu-18.04
-
+    # test
     steps:
     - uses: actions/checkout@v3
     - name: set up JDK 1.8
