--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,11 +1,6 @@
 name: Android CI
 
-on:
-  push:
-    branches: [ "dev" ]
-  pull_request:
-    branches: [ "dev" ]
-
+on: [push,pull_request]
 jobs:
   build:
 
