--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,9 +9,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: set up JDK 1.8
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v1
       with:
-        java-version: '1.8'
+        java-version: 1.8
         distribution: 'temurin'
         cache: gradle
 
