--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -19,3 +19,15 @@ jobs:
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+
+    - name: Prepare App
+      run: |
+        mkdir -p ${{ github.workspace }}/apk/
+        for file in `find ~ -name "*.apk" -print`; do
+          mv "$file" ${{ github.workspace }}/apk/
+        done
+    - name: Upload App To Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: com.abc.test.apk
+        path: ${{ github.workspace }}/apk/*
