test  set name and no debug apk

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -150,13 +150,13 @@ android {
 
     productFlavors {
 
-        dev {
-            dimension "all"
+        // dev {
+        //     dimension "all"
 
-            applicationId "com.simplecity.amp_pro"
+        //     applicationId "com.simplecity.amp_pro"
 
-            resConfigs "en", "xxhdpi"
-        }
+        //     resConfigs "en", "xxhdpi"
+        // }
 
         // paid {
         //     dimension "all"
