--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ buildscript {
         classpath Dependencies.Plugins.gradleVersions
         classpath Dependencies.Plugins.playServices
         classpath Dependencies.Plugins.kotlin
+          //root6819 Add the dependency for the Crashlytics Gradle plugin
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.5'
     }
 }
 
