--- a/app/build.gradle
+++ b/app/build.gradle
@@ -302,10 +302,10 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
     //root6819
-    // implementation 'com.google.firebase:firebase-crashlytics:18.3.7'
-    implementation platform('com.google.firebase:firebase-bom:30.1.0')
-   implementation 'com.google.firebase:firebase-crashlytics-ktx'
-   implementation 'com.google.firebase:firebase-analytics-ktx'
+     implementation 'com.google.firebase:firebase-crashlytics:18.3.7'
+//     implementation platform('com.google.firebase:firebase-bom:30.1.0')
+//    implementation 'com.google.firebase:firebase-crashlytics-ktx'
+//    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
 
 configurations.all {
