--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ plugins {
     id("kotlin-kapt")
     id("com.github.triplet.play") version "2.1.0"
     //root6819 Add the Crashlytics Gradle plugin
-    id 'com.google.firebase.crashlytics'
+    // id 'com.google.firebase.crashlytics'
     
 }
 
@@ -302,7 +302,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     }
     //root6819
-     implementation 'com.google.firebase:firebase-crashlytics:18.3.7'
+    //  implementation 'com.google.firebase:firebase-crashlytics:18.3.7'
 //     implementation platform('com.google.firebase:firebase-bom:30.1.0')
 //    implementation 'com.google.firebase:firebase-crashlytics-ktx'
 //    implementation 'com.google.firebase:firebase-analytics-ktx'
